--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: Веб-технологии
+baseurl: "web-tech"
+url: ""
 plugins:
   - jekyll-relative-links
 relative_links:
@@ -8,4 +11,4 @@ safe: true
 source: ./
 incremental: false
 highlighter: rouge
-theme: jekyll-theme-minimal
+theme: minimal
