--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
 title: Веб-технологии
 url: https://gosvoh.github.io
-baseurl: /web-tech/
+baseurl: /web-tech
 plugins:
   - jekyll-relative-links
 relative_links:
   enabled: true
   collections: true
 lsi: false
-safe: true
+safe: false
 incremental: false
 highlighter: rouge
-theme: jekyll-theme-minimal
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
